chore: fix overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,11 +8,13 @@
 // body {
 //   font-size: 1.6rem;
 // }
+
 $background: #e0e5eb;
 html,
 body {
   padding: 0;
   margin: 0;
+  height: 100%;
 }
 
 // for webkit-based browsers (Chrome, Safari, Opera)
